# AndroidApp_3dModelWalk

./: .gitignore  PrivacyPolicy.html  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  (+3 more)
hacoNiWA/app/: CMakeLists.txt  build.gradle  proguard-project.txt
hacoNiWA/app/src/main/assets/00_Yucco/Body/: VN_BodyBanzai.txt  VN_BodyCrouch.txt  VN_BodyWalkL.txt  VN_BodyWalkR.txt  VT_BodyCoverMouth.txt  VT_BodyHozueR.txt  V_BodyBanzai.txt  V_BodyCrouch.txt  V_BodyHozueL.txt  V_BodyWalkR.txt
hacoNiWA/app/src/main/assets/00_Yucco/Dress/Cardigan/: VN_DressCardiganBanzai.txt  VN_DressCardiganCoverMouth.txt  VN_DressCardiganMotionLess.txt  VN_DressCardiganWalkR.txt  VT_DressCardiganBanzai.txt  VT_DressCardiganCrouch.txt  VT_DressCardiganHozueR.txt  VT_DressCardiganWalkL.txt  VT_DressCardiganWalkR.txt  V_DressCardiganBanzai.txt  V_DressCardiganHozueR.txt  V_DressCardiganMotionLess.txt  V_DressCardiganWalkR.txt
hacoNiWA/app/src/main/assets/00_Yucco/Dress/Jersey/: VN_DressJerseyCoverMouth.txt  VN_DressJerseyCrouch.txt  VN_DressJerseyHandUp.txt  VN_DressJerseyHozueL.txt  VN_DressJerseyMotionLess.txt  VT_DressJerseyHandUp.txt  VT_DressJerseyMotionLess.txt  V_DressJerseyBanzai.txt  V_DressJerseyCoverMouth.txt  V_DressJerseyCrouch.txt  V_DressJerseyHandUp.txt  V_DressJerseyHozueR.txt  V_DressJerseyWalkL.txt
hacoNiWA/app/src/main/assets/00_Yucco/Dress/Miku/: VN_DressMikuCoverMouth.txt  VN_DressMikuMotionLess.txt  VN_DressMikuWalkL.txt  VT_DressMikuBanzai.txt  VT_DressMikuCoverMouth.txt  VT_DressMikuHandUp.txt  VT_DressMikuHozueL.txt  VT_DressMikuMotionLess.txt  V_DressMikuHandUp.txt  V_DressMikuHozueR.txt  V_DressMikuMotionLess.txt  V_DressMikuWalkL.txt  V_DressMikuWalkR.txt
hacoNiWA/app/src/main/assets/00_Yucco/Head/: VN_HeadBanzai.txt  VN_HeadCoverMouth.txt  VN_HeadCoverMouthR.txt  VN_HeadMotionLess.txt  V_HeadCoverMouthR.txt  V_HeadHandUp.txt  V_HeadHozueL.txt  V_HeadMotionLess.txt  V_HeadWalkL.txt  V_HeadWalkR.txt
hacoNiWA/app/src/main/assets/00_Yucco/cardigan/: VN_MotionLess.txt  VN_WalkL.txt  VT_WalkL.txt  VT_WalkR.txt  V_MotionLess.txt
hacoNiWA/app/src/main/assets/01_Droid/Body/: VN_BodyRaiseHandL.txt  VT_BodyRaiseHandR.txt  V_BodyRaiseHandL.txt  V_BodyRaiseHandR.txt  V_BodyWalkL.txt
hacoNiWA/app/src/main/assets/02_Frog/Body/: VN_BodyMotionLess.txt  VN_BodyRaiseHandL.txt  VT_BodyMotionLess.txt  VT_BodyRaiseHandL.txt  VT_BodyWalkR.txt  V_BodyBanzai.txt  V_BodyRaiseHandL.txt  V_BodyWalkL.txt  V_BodyWalkR.txt
hacoNiWA/app/src/main/assets/50_Sql/01_CreateTable/: 01.txt
hacoNiWA/app/src/main/assets/50_Sql/02_DropTable/: 01.txt
hacoNiWA/app/src/main/res/layout/: activity_help.xml  activity_menu_tab.xml  dialog_select_file.xml  fragment_menu_tabitem2.xml  fragment_setmodel_tabitem2.xml  fragment_setmodel_tabitem3.xml  main.xml  mrd_asta_wall.xml  mrd_asta_wall_icon_small.xml  mrd_asta_wall_l.xml  notification.xml  toast_fukidashi.xml  view_character_registration.xml  view_character_setting.xml  view_file_select.xml
hacoNiWA/app/src/main/res/values-ja/: strings.xml
hacoNiWA/app/src/main/res/values-v21/: styles.xml
(+690 files in other folders)
